# printserver

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  printertest.py
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-hardware-port-validation-spikes.md  1-2-monorepo-scaffolding.md  1-3-multi-stage-dockerfile-docker-compose.md  1-4-github-actions-cicd-pipeline.md  1-5-watchtower-auto-deploy-makefile.md  2-1-printerinterface-escposprinter-mockprinter.md  2-2-print-service-todo-receipt-goatse.md  2-3-print-service-free-text-qr-code.md  2-4-fastapi-application-routers-models-static-mount.md  2-5-status-cache-background-polling-thread.md  2-6-till-roll-tracker.md  2-7-admin-endpoints-full-test-suite.md  3-1-sveltekit-foundation.md  3-2-api-client-stores-and-polling.md  (+10 more)
backend/: pyproject.toml
backend/app/: auth.py  config.py  dependencies.py  main.py
backend/app/models/: admin_models.py  print_models.py
backend/app/routers/: admin.py  print.py  status.py
backend/app/services/: print_service.py  printer.py  roll_tracker.py  status_cache.py  telegram_bot.py
backend/tests/: conftest.py  test_placeholder.py
backend/tests/routers/: test_admin_routes.py  test_print_routes.py
backend/tests/services/: test_print_service.py  test_printer.py  test_roll_tracker.py  test_sanitize.py  test_status_cache.py  test_telegram_bot.py
docs/: operations.md  user-guide.md
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
(+27 files in other folders)
